--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
-    "dependencies": {
-    "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.7.2.tgz",
+  "dependencies": {
     "com.microsoft.mixedreality.openxr": "file:MixedReality/com.microsoft.mixedreality.openxr-1.3.1.tgz",
     "com.microsoft.mixedreality.toolkit.foundation": "file:MixedReality/com.microsoft.mixedreality.toolkit.foundation-2.7.3.tgz",
     "com.microsoft.mixedreality.toolkit.standardassets": "file:MixedReality/com.microsoft.mixedreality.toolkit.standardassets-2.7.3.tgz",
+    "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.7.2.tgz",
     "com.unity.collab-proxy": "1.11.2",
+    "com.unity.formats.fbx": "4.1.2",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.4",
